--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "fastapi>=0.116.1",
     "fastmcp>=2.11.0",
+    "ipykernel>=6.30.0",
+    "openai>=1.98.0",
+    "requests>=2.32.4",
 ]
+
+[[tool.uv.index]]
+url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
+default = true
